simpleSlideShow/enbition-deploy/base/user-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      imagePullSecrets:
        - name: image-pull-secret
      containers:
        - name: user-service
          image: ghcr.io/inholland-cloud-minor-2526/group7-user-service/user-service:a9754fdfc4eaf46db72160da68c856f5a901658e
          ports:
            - containerPort: 8080
